@startuml
'https://plantuml.com/class-diagram

interface IChatMediator{
+ void register(ChatUser user)
+ void unregister(ChatUser user)
+ void sendMessage(String message, ChatUser form, String told)
+ void sendBroadcast(String message, ChatUser from)
}
class ChatMediator{
+ HashMap<String,ChatUser> userMaps
}
class ChatSimpleUser{
}
abstract class ChatUser{
- String id
- String name
+ void register()
+ void unregister()
+ void sendMessage(String message, String told)
+ void sendBroadcast(String message)
{abstract} + void recieve(String message, ChatUser from)
}
ChatMediator ..|> IChatMediator
ChatSimpleUser --|> ChatUser
ChatUser --> IChatMediator: mediator
ChatMediator o--> ChatUser: users


@enduml